maquetacion header y main

--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@ family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        logo
-        Blog
-        contacto
+    <header class="header">
+        <img class="logo" src="./images/adalab-logo-155x61.png" alt="logo">
+        <ul class="menu">
+            <li class="menu-item"> BLOG </li>
+            <li class="menu-item menu-item-last">CONTACTO</li>
+        </ul>
+
+
     </header>
-    <main>
-        Creando Diversidad Digital
+    <main class="main">
+        <h1 class="title">Creando Diversidad Digital</h1>
     </main>
 
 </body>
