--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 
 <body>
     <header class="header">
-        <img class="logo" src="./images/adalab-logo-155x61.png" alt="logo">
+        <a href="./index.html"><img class="logo" src="./images/adalab-logo-155x61.png" alt="logo"></a>
         <ul class="menu">
             <li class="menu-item"> BLOG </li>
             <li class="menu-item menu-item-last">CONTACTO</li>
