--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@ family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 
 <body>
     <header class="header">
-        <a href="./index.html"><img class="logo" src="./images/adalab-logo-155x61.png" alt="logo"></a>
-        <ul class="menu">
-            <li class="menu-item"> BLOG </li>
-            <li class="menu-item menu-item-last">CONTACTO</li>
-        </ul>
-
+        <a href="https://adalab.es/"><img class="logo" src="./images/adalab-logo-155x61.png" alt="logo"
+                title="logotipo corporativo"></a>
+        <nav>
+            <ul class="menu">
+                <li> <a class="menu-item" href="#" title="blog"> blog </a> </li>
+                <li> <a class=" menu-item menu-item-last" href="#" title="contacto"> contacto </a> </li>
+            </ul>
+        </nav>
 
     </header>
     <main class="main">
-        <h1 class="title">Creando Diversidad Digital</h1>
+        <h1 class="title">creando diversidad digital</h1>
     </main>
 
 </body>
